last part remain

--- a/world-cup-main/index.html
+++ b/world-cup-main/index.html
@@ -32,100 +32,128 @@
             </div>
         </div>
     </section>
-    <section class="containers">
-        <div class="side-div-1">
-            <div class="buttton">
-                <button>Upcoming Match</button><br>
-                <button>All Group</button><br>
-                <button>Blog</button><br>
-            </div>
-        </div>
-        <div class="side-div-2">
-            <div>
-                <img src="assets/Blog Image.png" alt="">
-                <button>transfer</button>
-                <h4>Transfer Live: Chlesea in talks <br> over Kimpenbe transfer</h4>
-                <div class="symbol">
-                    <i class="fa-regular fa-clock">10 h</i>
-                    <i class="fa-regular fa-comment-dots">23</i>
+    <main>
+        <section class="containers2">
+            <div class="side-div-1">
+                <div class="buttton">
+                    <button>Upcoming Match</button><br>
+                    <button>All Group</button><br>
+                    <button>Blog</button><br>
                 </div>
             </div>
-            <div>
-                <img src="assets/Blog Image.png" alt="">
-                <button>transfer</button>
-                <h4>Transfer Live: Chlesea in talks <br> over Kimpenbe transfer</h4>
-                <div class="symbol">
-                    <i class="fa-regular fa-clock">10 h</i>
-                    <i class="fa-regular fa-comment-dots">23</i>
+            <div class="side-div-2">
+                <div class="side-div-21">
+
+                    <img src="assets/Blog Image.png" alt="">
+                    <div class="side-div-211"><button>Transfer</button>
+                        <h4>Transfer Live: Chlesea in talks <br> over Kimpenbe transfer</h4>
+                        <div class="symbol">
+                            <i class="fa-regular fa-clock">10 h</i>
+                            <i class="fa-regular fa-comment-dots">23</i>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div>
-                <img src="assets/Blog Image.png" alt="">
-                <button>transfer</button>
-                <h4>Transfer Live: Chlesea in talks <br> over Kimpenbe transfer</h4>
-                <div class="symbol">
-                    <i class="fa-regular fa-clock">10 h</i>
-                    <i class="fa-regular fa-comment-dots">23</i>
+
+                <div class="side-div-21">
+                    <img src="assets/Blog Image.png" alt="">
+                    <div class="side-div-211"><button>Transfer</button>
+                        <h4>Transfer Live: Chlesea in talks <br> over Kimpenbe transfer</h4>
+                        <div class="symbol">
+                            <i class="fa-regular fa-clock">10 h</i>
+                            <i class="fa-regular fa-comment-dots">23</i>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div>
-                <img src="assets/Blog Image.png" alt="">
-                <button>transfer</button>
-                <h4>Transfer Live: Chlesea in talks <br> over Kimpenbe transfer</h4>
-                <div class="symbol">
-                    <i class="fa-regular fa-clock">10 h</i>
-                    <i class="fa-regular fa-comment-dots">23</i>
+                <div class="side-div-21">
+                    <img src="assets/Blog Image.png" alt="">
+                    <div class="side-div-211"><button>Transfer</button>
+                        <h4>Transfer Live: Chlesea in talks <br> over Kimpenbe transfer</h4>
+                        <div class="symbol">
+                            <i class="fa-regular fa-clock">10 h</i>
+                            <i class="fa-regular fa-comment-dots">23</i>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div>
-                <img src="assets/Blog Image.png" alt="">
-                <button>transfer</button>
-                <h4>Transfer Live: Chlesea in talks <br> over Kimpenbe transfer</h4>
-                <div class="symbol">
-                    <i class="fa-regular fa-clock">10 h</i>
-                    <i class="fa-regular fa-comment-dots">23</i>
+                <div class="side-div-21">
+                    <img src="assets/Blog Image.png" alt="">
+                    <div class="side-div-211"><button>Transfer</button>
+                        <h4>Transfer Live: Chlesea in talks <br> over Kimpenbe transfer</h4>
+                        <div class="symbol">
+                            <i class="fa-regular fa-clock">10 h</i>
+                            <i class="fa-regular fa-comment-dots">23</i>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div>
-                <img src="assets/Blog Image.png" alt="">
-                <button>transfer</button>
-                <h4>Transfer Live: Chlesea in talks <br> over Kimpenbe transfer</h4>
-                <div class="symbol">
-                    <i class="fa-regular fa-clock">10 h</i>
-                    <i class="fa-regular fa-comment-dots">23</i>
+                <div class="side-div-21">
+                    <img src="assets/Blog Image.png" alt="">
+                    <div class="side-div-211"><button>Transfer</button>
+                        <h4>Transfer Live: Chlesea in talks <br> over Kimpenbe transfer</h4>
+                        <div class="symbol">
+                            <i class="fa-regular fa-clock">10 h</i>
+                            <i class="fa-regular fa-comment-dots">23</i>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div>
-                <img src="assets/Blog Image.png" alt="">
-                <button>transfer</button>
-                <h4>Transfer Live: Chlesea in talks <br> over Kimpenbe transfer</h4>
-                <div class="symbol">
-                    <i class="fa-regular fa-clock">10 h</i>
-                    <i class="fa-regular fa-comment-dots">23</i>
+                <div class="side-div-21">
+                    <img src="assets/Blog Image.png" alt="">
+                    <div class="side-div-211"><button>Transfer</button>
+                        <h4>Transfer Live: Chlesea in talks <br> over Kimpenbe transfer</h4>
+                        <div class="symbol">
+                            <i class="fa-regular fa-clock">10 h</i>
+                            <i class="fa-regular fa-comment-dots">23</i>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div>
-                <img src="assets/Blog Image.png" alt="">
-                <button>transfer</button>
-                <h4>Transfer Live: Chlesea in talks <br> over Kimpenbe transfer</h4>
-                <div class="symbol">
-                    <i class="fa-regular fa-clock">10 h</i>
-                    <i class="fa-regular fa-comment-dots">23</i>
+                <div class="side-div-21">
+                    <img src="assets/Blog Image.png" alt="">
+                    <div class="side-div-211"><button>Transfer</button>
+                        <h4>Transfer Live: Chlesea in talks <br> over Kimpenbe transfer</h4>
+                        <div class="symbol">
+                            <i class="fa-regular fa-clock">10 h</i>
+                            <i class="fa-regular fa-comment-dots">23</i>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div>
-                <img src="assets/Blog Image.png" alt="">
-                <button>transfer</button>
-                <h4>Transfer Live: Chlesea in talks <br> over Kimpenbe transfer</h4>
-                <div class="symbol">
-                    <i class="fa-regular fa-clock">10 h</i>
-                    <i class="fa-regular fa-comment-dots">23</i>
+                <div class="side-div-21">
+                    <img src="assets/Blog Image.png" alt="">
+                    <div class="side-div-211"><button>Transfer</button>
+                        <h4>Transfer Live: Chlesea in talks <br> over Kimpenbe transfer</h4>
+                        <div class="symbol">
+                            <i class="fa-regular fa-clock">10 h</i>
+                            <i class="fa-regular fa-comment-dots">23</i>
+                        </div>
+                    </div>
                 </div>
+                <div class="side-div-21">
+                    <img src="assets/Blog Image.png" alt="">
+                    <div class="side-div-211"><button>Transfer</button>
+                        <h4>Transfer Live: Chlesea in talks <br> over Kimpenbe transfer</h4>
+                        <div class="symbol">
+                            <i class="fa-regular fa-clock">10 h</i>
+                            <i class="fa-regular fa-comment-dots">23</i>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
-        </div>
+        </section>
+        <section class="section-bg">
+            <footer class="footerr">
+                <h3>Goal</h3>
 
-    </section>
+            </footer>
+            <hr>
+            <div class="footerr2">
+                <div>Contact Us </div>
+                <div>Term of Service</div>
+                <div>Privacy Policy</div>
+                <div>Privacy Settings</div>
+                <div> Goal App</div>
+                <div> Goal Live</div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
