--- a/world-cup-main/index.html
+++ b/world-cup-main/index.html
@@ -36,9 +36,11 @@
         <section class="containers2">
             <div class="side-div-1">
                 <div class="buttton">
-                    <button>Upcoming Match</button><br>
-                    <button>All Group</button><br>
-                    <button>Blog</button><br>
+                    <div class="side0">
+                        <input type="button" value="Up Comming match"><br>
+                        <input type="button" value="All Group"><br>
+                        <input class="color" type="button" value="Blog"><br>
+                    </div>
                 </div>
             </div>
             <div class="side-div-2">
