--- a/world-cup-main/blog.html
+++ b/world-cup-main/blog.html
@@ -40,7 +40,7 @@
                         <a class="center" href="upcoming.html">Upcomming Match</a><br>
                         <input type="button" value="All Group"><br>
                         <!-- <input class="color" type="button" value="Blog"><br> -->
-                        <a class="center color" href="blog.html"> Blog</a><br>
+                        <input class="color" type="button" value="Blog">br
                     </div>
                 </div>
             </div>
