--- a/world-cup-main/blog.html
+++ b/world-cup-main/blog.html
@@ -40,7 +40,7 @@
                         <a class="center" href="upcoming.html">Upcomming Match</a><br>
                         <input type="button" value="All Group"><br>
                         <!-- <input class="color" type="button" value="Blog"><br> -->
-                        <input class="color" type="button" value="Blog">br
+                        <input class="color" type="button" value="Blog"><br>
                     </div>
                 </div>
             </div>
@@ -156,6 +156,14 @@
             <div>Privacy Settings</div>
             <div> Goal App</div>
             <div> Goal Live</div>
+        </div>
+        <div>
+            <br><br>
+            <p class="center">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-whatsapp"></i>
+            </p>
         </div>
     </section>
 </body>
