--- a/world-cup-main/index.html
+++ b/world-cup-main/index.html
@@ -157,6 +157,14 @@
             <div> Goal App</div>
             <div> Goal Live</div>
         </div>
+        <div>
+            <br><br>
+            <p class="center">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-whatsapp"></i>
+            </p>
+        </div>
     </section>
 </body>
 
