--- a/world-cup-main/upcoming.html
+++ b/world-cup-main/upcoming.html
@@ -112,6 +112,29 @@
         </div>
     </section>
 </main>
+<section class="section-bg">
+    <footer class="footerr">
+        <h3>Goal</h3>
+
+    </footer>
+    <hr>
+    <div class="footerr2">
+        <div>Contact Us </div>
+        <div>Term of Service</div>
+        <div>Privacy Policy</div>
+        <div>Privacy Settings</div>
+        <div> Goal App</div>
+        <div> Goal Live</div>
+    </div>
+    <div>
+        <br><br>
+        <p class="center">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-whatsapp"></i>
+        </p>
+    </div>
+</section>
 
 <body>
 
